--- a/config/database.yml
+++ b/config/database.yml
@@ -14,8 +14,9 @@ default: &default
   encoding: utf8
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
   username: root
-  password:
+  password: 
   host: localhost
+  socket: C:/xampp/mysql/mysql.sock
 
 development:
   <<: *default
@@ -26,7 +27,7 @@ development:
 # Do not set this db to the same as development or production.
 test:
   <<: *default
-  database: moviereviews_test
+  database: #moviereviews_test
 
 # As with config/secrets.yml, you never want to store sensitive information,
 # like your database password, in your source code. If your source code is
