--- a/config/database.yml
+++ b/config/database.yml
@@ -13,21 +13,21 @@ default: &default
   adapter: mysql2
   encoding: utf8
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
-  username: root
-  password: 
+  username: moviereviews_admin
+  password: apasswordfortesting
   host: localhost
   socket: C:/xampp/mysql/mysql.sock
 
 development:
   <<: *default
-  database: moviereviews_development
+  database: moviereviews_data
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
 test:
   <<: *default
-  database: #moviereviews_test
+  database: moviereviews_test
 
 # As with config/secrets.yml, you never want to store sensitive information,
 # like your database password, in your source code. If your source code is
